@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Added 'COLOR' resource type - SvdB
 - All graphics operations use 24-bits colors at the game level too now,
   instead of 16 bits colors. - SvdB
 - Cross-platform safemode (ignores uqm.cfg, bug #946) - Michael
